<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#737373">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/title"
        android:layout_below="@+id/cover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/cover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/quran_image"
        android:contentDescription="@string/cover"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"/>
    <include layout="@layout/player_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/controller"/>

</RelativeLayout>