<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/MaterialAlertDialog.Material3.Mine"
    app:cardCornerRadius="30dp"
    style="@style/Widget.Material3.CardView.Filled"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    xmlns:tools="http://schemas.android.com/tools">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_timer_time"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:id="@+id/title"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/title"
                android:layout_centerHorizontal="true"
                android:id="@+id/relativeLayout">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/time_in_mins"
                    android:id="@+id/textInputLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editText"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/curTime"
                    android:text="@string/curtime"
                    android:layout_toEndOf="@+id/textInputLayout"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:layout_margin="10dp"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/ok"
                    android:text="@string/ok"
                    android:layout_margin="10dp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>

</com.google.android.material.card.MaterialCardView>